# DSA-C-with-gtest

./: .gitignore  CMakeLists.txt
Search-algorithms/: binary_search.cpp  binary_search.h  linear_search.cpp  linear_search.h
Sorting-algorithms/: bubble-sort.cpp  bubble-sort.h  insertion-sort.cpp  insertion-sort.h  merge-sort_inplace_value.cpp  selection-sort.cpp  selection-sort.h  sort_summary.cpp
tests/: test_binary_search.cpp  test_bubble_sort.cpp  test_insertion_sort.cpp  test_linear_search.cpp  test_selection_sort.cpp
